[gd_scene load_steps=11 format=2]

[ext_resource path="res://mods-unpacked/Raffa-HydraLauncher/extensions/content/gadgets/hydralauncher/HydraLauncher.gd" type="Script" id=1]
[ext_resource path="res://mods-unpacked/Raffa-HydraLauncher/extensions/content/gadgets/hydralauncher/hydralauncher_light.png" type="Texture" id=2]
[ext_resource path="res://systems/style/materials/palette_swap_shader_control.tres" type="Material" id=3]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=4]
[ext_resource path="res://mods-unpacked/Raffa-HydraLauncher/extensions/content/gadgets/hydralauncher/hydralauncher_shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/Weapons/artillery/artillery_bass.wav" type="AudioStream" id=6]
[ext_resource path="res://mods-unpacked/Raffa-HydraLauncher/extensions/content/gadgets/hydralauncher/HydraAmmoCapacityGlow.gd" type="Script" id=8]
[ext_resource path="res://mods-unpacked/Raffa-HydraLauncher/extensions/content/gadgets/hydralauncher/hydralauncher_sheet.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.501961, 0, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0313726, 0.0509804, 0.392157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0313726, 0.0509804, 0.392157, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="HydraLauncher" type="Node2D"]
script = ExtResource( 1 )

[node name="Visuals" type="Node2D" parent="."]
position = Vector2( 20, 9 )

[node name="Base" type="Sprite" parent="Visuals"]
position = Vector2( 0, -15 )
texture = ExtResource( 9 )
hframes = 3
frame = 1

[node name="ReloadProgress" type="ProgressBar" parent="Visuals/Base" groups=["styleShaderCallback", "styled"]]
show_behind_parent = true
material = ExtResource( 3 )
margin_left = -2.0
margin_top = 14.0
margin_right = 12.0
margin_bottom = 18.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1.0
value = 0.5
percent_visible = false

[node name="Top" type="Sprite" parent="Visuals"]
texture = ExtResource( 9 )
offset = Vector2( 0, -15 )
hframes = 3
frame = 2

[node name="LaunchPos" type="Position2D" parent="Visuals/Top"]
unique_name_in_owner = true
position = Vector2( 0, -21 )
rotation = -1.57079

[node name="Ammo1" type="Sprite" parent="Visuals" groups=["hydraAmmoLeft"]]
position = Vector2( 0, -9 )
z_index = -1
texture = ExtResource( 9 )
offset = Vector2( -9, 0 )
region_enabled = true
region_rect = Rect2( 4, 19, 6, 5 )

[node name="Lamp" type="Sprite" parent="Visuals/Ammo1"]
position = Vector2( -12, 0 )
texture = ExtResource( 2 )
script = ExtResource( 8 )

[node name="Ammo2" type="Sprite" parent="Visuals"]
position = Vector2( 0, -9 )
z_index = -1
texture = ExtResource( 9 )
offset = Vector2( 9, 0 )
region_enabled = true
region_rect = Rect2( 22, 19, 6, 5 )

[node name="Lamp" type="Sprite" parent="Visuals/Ammo2"]
position = Vector2( 13, 0 )
texture = ExtResource( 2 )
script = ExtResource( 8 )

[node name="Ammo3" type="Sprite" parent="Visuals" groups=["hydraAmmoLeft"]]
position = Vector2( 0, -15 )
z_index = -1
texture = ExtResource( 9 )
offset = Vector2( -8, 0 )
region_enabled = true
region_rect = Rect2( 4, 19, 6, 5 )

[node name="Lamp" type="Sprite" parent="Visuals/Ammo3"]
position = Vector2( -11, 0 )
texture = ExtResource( 2 )
script = ExtResource( 8 )

[node name="Ammo4" type="Sprite" parent="Visuals"]
position = Vector2( 0, -15 )
z_index = -1
texture = ExtResource( 9 )
offset = Vector2( 8, 0 )
region_enabled = true
region_rect = Rect2( 22, 19, 6, 5 )

[node name="Lamp" type="Sprite" parent="Visuals/Ammo4"]
position = Vector2( 12, 0 )
texture = ExtResource( 2 )
script = ExtResource( 8 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Sounds"
script = ExtResource( 4 )
randomVolume = 0.8
randomPitch = 0.2

[node name="ShotSoundBass" type="AudioStreamPlayer" parent="ShotSound"]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 1.2
bus = "Sounds"
script = ExtResource( 4 )
randomVolume = 0.5

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
